Lista la calculadoraç

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <button class="btn">.</button>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
+cal
